SED-2560: isolated execution of automation package - scan java keywords